--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="box">
                         <img src="Screenshot_2023-03-17-12-43-29-204_com.instagram.android-modified.png" alt="">
                         <div class="text">Sathosh Kumar</div>
-                        <p>Associate Enginner|Web developer| C#| Full Stack developer|  Cyber Security| AzureDevops</p>
+                        <p>Associate Engineer|Web developer| C#| Full Stack developer|  Cyber Security| AzureDevops</p>
                     </div>
                 </div>
                 <div class="card">
@@ -260,3 +260,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
